# medcoder

./: .env.example  .gitignore  Dockerfile  LICENSING.md  Makefile  Plan.md  README.md  WALKTHROUGH.md  pyproject.toml
data/catalogs/: procedures_synthetic.csv
data/gold/: labels.json
data/notes/: note_01_outpatient_diabetes.txt  note_02_ed_chest_pain.txt  note_03_inpatient_pneumonia_ambiguity.txt  note_04_multipage_postop.txt
docs/: DESIGN-full.md  DESIGN.md  Plan.md  Problem.md  WALKTHROUGH.md
outputs/eval/: metrics.json
outputs/note_01_outpatient_diabetes/: result.annotated.md  result.json  result.md  trace.json
outputs/note_02_ed_chest_pain/: result.annotated.md  result.json  result.md  trace.json
outputs/note_03_inpatient_pneumonia_ambiguity/: result.annotated.md  result.json  result.md  trace.json
outputs/note_04_multipage_postop/: result.annotated.md  result.json  result.md  trace.json
scripts/: build_index.py  build_pdf.sh  evaluate.py  generate_examples.py  smoke_with_mocks.py
src/medcoder/: __init__.py  audit_trace.py  cli.py  code_assign.py  confidence.py  config.py  extract.py  ingest.py  llm.py  logging_setup.py  pipeline.py  render.py  rules.py  schemas.py  verify.py
src/medcoder/prompts/: __init__.py  auditor_p1.txt  coder_p1.txt  extraction_p1.txt  extraction_p2.txt
src/medcoder/retrieval/: __init__.py  catalog.py  embedders.py  hybrid.py  lexical.py  vector.py
tests/: conftest.py  test_confidence.py  test_consistency.py  test_embedders.py  test_extraction.py  test_ingest.py  test_llm_retry.py  test_model_selection.py  test_outputs_and_render.py  test_pipeline_mock.py  test_retrieval.py  test_rules.py  test_schemas.py
